# app-studio

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  rxconfig.py
app_studio/: app_studio.py
app_studio/app_list/: __init__.py  models.py  page.py  state.py
app_studio/atpa/: README.md  __init__.py  page.py  state.py
app_studio/components/: __init__.py  alert_dialog.py  file_upload.py  navbar.py  sidebar.py
app_studio/hcr/: README.md  __init__.py  page.py  state.py
app_studio/hcr/utils/: connections.py
app_studio/hra/: README.md  __init__.py  page.py  state.py
app_studio/mcf/: README.md  __init__.py  page.py  state.py
app_studio/mra/: README.md  __init__.py  detail.py  list.py  page.py  pdf_pagination.js  pdf_view.js  state.py  view.py
app_studio/navigation/: __init__.py  routes.py  state.py
app_studio/pages/: __init__.py  hello.py
app_studio/rag/: __init__.py  page.py
app_studio/test/: __init__.py  models.py  page.py  pdf_view.js
app_studio/tpa/: README.md  __init__.py  page.py  state.py
app_studio/ui/: __init__.py  dashboard.py
assets/fonts/: myfont.css
assets/styles/: pdf_style.css
