[project]
name = "app-studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dill>=0.3.8",
    "openai>=1.84.0",
    "psycopg2-binary>=2.9.10",
    "pypdf>=5.6.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "reflex==0.7.14",
    "reflex-local-auth>=0.3.0",
]
